Bugfix: read-only LookupInput threw NPE because button was expected in  it's default node renderer. Bugfix: 1st attempt to fix fugly alignment of DateInput buttons.

--- a/to.etc.domui/src/resources/themes/blue/style.css
+++ b/to.etc.domui/src/resources/themes/blue/style.css
@@ -450,7 +450,7 @@ table.ui-lui {
 .ui-f-in {
 	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
 	font-family: verdana, tahoma, helvetica, sans-serif;
-	vertical-align: top;
+	vertical-align: middle; /* jal 20090818 changed from top to middle to align DateInput buttons better */
 }
 
 /*** Form basic styles: for forms having the label ABOVE the field (vertical stacked) ***/
